[package]
name = "flacenc"
version = "0.3.0"
description = "FLAC encoder written in Rust."
documentation = "https://docs.rs/flacenc/latest/flacenc"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["flac", "lossless", "encoder", "audio"]
categories = ["compression", "multimedia::audio", "multimedia::encoding"]
repository = "https://github.com/yotarok/flacenc-rs/"

# This is for enabling use of profilers with a release build.
[profile.release]
debug = 1

[features]
default = ["par"]
experimental = ["dep:nalgebra"]
par = ["dep:crossbeam-channel"]
mimalloc = ["dep:mimalloc"]
simd-nightly = []

[dependencies]
crc = "2.1"
crossbeam-channel = { version = "0.5.8", optional = true }
heapless = "0.7.10"
md5 = "0.7.0"
mimalloc = { version = "0.1.39", default-features = false, optional = true }
nalgebra = { version = "0.31", optional = true }
num-traits = "0.2"
rustversion = "1.0"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
bitvec = "1.0.0"
claxon = "0.4.3"
hound = "3.5.0"
once_cell = "1.10.0"
rand = "0.8.5"
rstest = "0.18.2"
tempfile = "3"
