[package]
name = "flacdec-bin"
version = "0.1.0"
authors = ["Yotaro Kubo <yotaro@google.com>"]
description = "FLAC decoder written in pure Rust. An example application for flacenc crate."
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["flac", "lossless", "decoder", "audio"]
categories = ["compression", "multimedia::audio", "multimedia::encoding"]
repository = "https://github.com/yotarok/flacenc-rs/"


# This is for enabling use of profilers with a release build.
[profile.release]
debug = 1
panic = "abort"
lto = "fat"
codegen-units = 1

[[bin]]
name = "flacdec"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
flacenc = { version = "0.4.0", path = "..", features = [
  "experimental",
  "mimalloc",
  "par",
  "__export_decode",
] }
hound = "3.5.1"
log = "0.4"
rmp-serde = "1.1.2"
termcolor = "1.4"

[features]
default = []
