[package]
name = "flacenc-bin"
version = "0.2.3"
authors = ["Yotaro Kubo <yotaro@google.com>"]
description = "FLAC encoder written in pure Rust. An example application for flacenc crate."
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["flac", "lossless", "encoder", "audio"]
categories = ["compression", "multimedia::audio", "multimedia::encoding"]
repository = "https://github.com/yotarok/flacenc-rs/"


# This is for enabling use of profilers with a release build.
[profile.release]
debug = 1
panic = "abort"
lto = "fat"
codegen-units = 1

[[bin]]
name = "flacenc"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
flacenc = { version = "0.3.1", path = "..", features = ["experimental", "mimalloc", "par"] }
hound = "3.5.0"
log = "0.4"
pprof = { version = "0.12", features = ["flamegraph", "protobuf-codec"], optional = true }
termcolor = "1.3"
toml = "0.5"

[features]
default = []
pprof = ["dep:pprof"]
simd-nightly = ["flacenc/simd-nightly"]
