[package]
name = "flacenc-bin"
version = "0.2.4"
authors = ["Yotaro Kubo <yotaro@google.com>"]
description = "FLAC encoder written in pure Rust. An example application for flacenc crate."
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["flac", "lossless", "encoder", "audio"]
categories = ["compression", "multimedia::audio", "multimedia::encoding"]
repository = "https://github.com/yotarok/flacenc-rs/"


# This is for enabling use of profilers with a release build.
[profile.release]
debug = 1
panic = "abort"
lto = "fat"
codegen-units = 1

[[bin]]
name = "flacenc"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
flacenc = { version = "0.4.0", path = "..", features = [
  "experimental",
  "par",
] }
hound = "3.5.1"
log = "0.4"
pprof = { version = "0.13", features = [
  "flamegraph",
  "protobuf-codec",
], optional = true }
sndfile = { version = "0.1.1", optional = true }
termcolor = "1.4"
toml = "0.8.10"

[features]
default = []
pprof = ["dep:pprof"]
simd-nightly = ["flacenc/simd-nightly"]
sndfile = ["dep:sndfile"]
